--- a/wordle-bot-search/package.json
+++ b/wordle-bot-search/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wordle-bot-search",
   "version": "0.1.0",
-  "homepage": "https://hannah-marcus28.github.io/wordle-bot-search",
+  "homepage": "https://hannah-marcus28.github.io/wordle-search",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
